Bug 336412 - Knights crashes when abort online game
Summary: Knights crashes when abort online game
Status: RESOLVED FIXED
Alias: None
Product: knights
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5.0
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Miha Čančula
URL:
Keywords: drkonqi
: 296130 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-19 04:58 UTC by Brallan Aguilar
Modified: 2018-08-19 18:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brallan Aguilar 2014-06-19 04:58:31 UTC
Application: knights (2.5.0)
KDE Platform Version: 4.12.5
Qt Version: 4.8.6
Operating System: Linux 3.14.7-200.fc20.i686 i686
Distribution: "Fedora release 20 (Heisenbug)"

-- Information about the crash:
- What I was doing when the application crashed:
I was playing with freechess.com, I loaded a game but repently Knights no moved chess pieces. Finally I pressed Abort and it crashed.

-- Backtrace:
Application: Knights (knights), signal: Segmentation fault
Using host libthread_db library "/lib/libthread_db.so.1".
[KCrash Handler]
#7  0x0808b645 in Knights::Manager::local (this=this@entry=0xa162310) at /usr/src/debug/knights-2.5.0/src/gamemanager.cpp:663
#8  0x0808bc4b in Knights::Manager::sendOffer (this=this@entry=0xa162310, offer=...) at /usr/src/debug/knights-2.5.0/src/gamemanager.cpp:573
#9  0x0808bebf in Knights::Manager::sendOffer (this=this@entry=0xa162310, action=action@entry=Knights::ActionAbort, player=player@entry=Knights::NoColor, id=id@entry=0) at /usr/src/debug/knights-2.5.0/src/gamemanager.cpp:563
#10 0x0808bf58 in Knights::Manager::abort (this=0xa162310) at /usr/src/debug/knights-2.5.0/src/gamemanager.cpp:426
#11 0x0805ce48 in Knights::Manager::qt_static_metacall (_o=<optimized out>, _id=<optimized out>, _a=<optimized out>, _c=<optimized out>) at /usr/src/debug/knights-2.5.0/build/src/moc_gamemanager.cpp:132
#12 0x43aad395 in QMetaObject::activate (sender=sender@entry=0xa26a378, m=m@entry=0x446fcb98 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0xbf93fee4) at kernel/qobject.cpp:3567
#13 0x43d5677a in QAction::triggered (this=this@entry=0xa26a378, _t1=false) at .moc/release-shared/moc_qaction.cpp:276
#14 0x43d585d4 in QAction::activate (this=0xa26a378, event=event@entry=QAction::Trigger) at kernel/qaction.cpp:1257
#15 0x44279ca1 in trigger (this=<optimized out>) at ../../src/gui/kernel/qaction.h:218
#16 QToolButton::nextCheckState (this=0xa1a3fb0) at widgets/qtoolbutton.cpp:1152
#17 0x4419b354 in QAbstractButtonPrivate::click (this=this@entry=0xa191248) at widgets/qabstractbutton.cpp:530
#18 0x4419b4ae in QAbstractButton::mouseReleaseEvent (this=this@entry=0xa1a3fb0, e=e@entry=0xbf940484) at widgets/qabstractbutton.cpp:1123
#19 0x44279c08 in QToolButton::mouseReleaseEvent (this=0xa1a3fb0, e=0xbf940484) at widgets/qtoolbutton.cpp:723
#20 0x43dbc28b in QWidget::event (this=this@entry=0xa1a3fb0, event=event@entry=0xbf940484) at kernel/qwidget.cpp:8389
#21 0x4419c5c2 in QAbstractButton::event (this=this@entry=0xa1a3fb0, e=e@entry=0xbf940484) at widgets/qabstractbutton.cpp:1082
#22 0x44279d05 in QToolButton::event (this=0xa1a3fb0, event=0xbf940484) at widgets/qtoolbutton.cpp:1168
#23 0x43d5dbd4 in QApplicationPrivate::notify_helper (this=0xa04a8b8, receiver=0xa1a3fb0, e=0xbf940484) at kernel/qapplication.cpp:4565
#24 0x43d66896 in QApplication::notify (this=0xbf940a20, receiver=0xa1a3fb0, e=e@entry=0xbf940484) at kernel/qapplication.cpp:4108
#25 0x42648ec0 in KApplication::notify (this=0xbf940a20, receiver=0xa1a3fb0, event=0xbf940484) at /usr/src/debug/kdelibs-4.12.5/kdeui/kernel/kapplication.cpp:311
#26 0x43a975f6 in QCoreApplication::notifyInternal (this=0xbf940a20, receiver=receiver@entry=0xa1a3fb0, event=event@entry=0xbf940484) at kernel/qcoreapplication.cpp:953
#27 0x43d642e2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:231
#28 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0xa1a3fb0, event=0xbf940484, alienWidget=0xa1a3fb0, nativeWidget=0xa23ea88, buttonDown=buttonDown@entry=0x4471a3e4 <qt_button_down>, lastMouseReceiver=..., spontaneous=spontaneous@entry=true) at kernel/qapplication.cpp:3173
#29 0x43de9db8 in QETWidget::translateMouseEvent (this=0xa23ea88, event=event@entry=0xbf94069c) at kernel/qapplication_x11.cpp:4540
#30 0x43de84a3 in QApplication::x11ProcessEvent (this=0xbf940a20, event=event@entry=0xbf94069c) at kernel/qapplication_x11.cpp:3663
#31 0x43e141ab in x11EventSourceDispatch (s=s@entry=0xa0534b0, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#32 0x4a265556 in g_main_dispatch (context=0xa0482c8) at gmain.c:3066
#33 g_main_context_dispatch (context=context@entry=0xa0482c8) at gmain.c:3642
#34 0x4a265920 in g_main_context_iterate (context=context@entry=0xa0482c8, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3713
#35 0x4a2659e9 in g_main_context_iteration (context=0xa0482c8, may_block=1) at gmain.c:3774
#36 0x43ac91c4 in QEventDispatcherGlib::processEvents (this=this@entry=0xa0286d0, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#37 0x43e1436c in QGuiEventDispatcherGlib::processEvents (this=0xa0286d0, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#38 0x43a95ea0 in QEventLoop::processEvents (this=this@entry=0xbf940964, flags=...) at kernel/qeventloop.cpp:149
#39 0x43a96231 in QEventLoop::exec (this=this@entry=0xbf940964, flags=...) at kernel/qeventloop.cpp:204
#40 0x43a9c06b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1225
#41 0x43d5bee5 in QApplication::exec () at kernel/qapplication.cpp:3823
#42 0x0805ae66 in main (argc=5, argv=0xbf940af4) at /usr/src/debug/knights-2.5.0/src/main.cpp:79

Reported using DrKonqi
Comment 1 Christoph Feck 2014-08-22 13:24:58 UTC
*** Bug 296130 has been marked as a duplicate of this bug. ***
Comment 2 Alexander Semke 2018-08-19 18:36:14 UTC
Git commit 139f99467e61d8ba46cb7f6a843d19ee05706f1c by Alexander Semke.
Committed on 19/08/2018 at 18:35.
Pushed by asemke into branch 'master'.

Don't crash when aborting online games.
FIXED-IN: 2.6

M  +13   -6    src/gamemanager.cpp

https://commits.kde.org/knights/139f99467e61d8ba46cb7f6a843d19ee05706f1c