Don't crash when aborting online games.

BUG: 336412
FIXED-IN: 2.6